# SAGE

./: .gitignore  .pyre_configuration  .sage-memory.md  .sage-rules.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  open_blockers  project_structure.md  pyproject.toml  pytest.ini  requirements.txt  startup.ps1  startup.sh
.sage/: conventions.md  project.json  rules.coder.md  rules.md
docs/: ARCHITECTURE_STATUS.md  CLI.md  GREENFIELD.md  INSTALL.md  LIVE_TESTING.md  LOCAL_PROJECT_PREP.md  PRODUCTION_AND_SKILLS_ROADMAP.md  README.md  TRUST_AND_SCALE.md  architecture.md  architecture_diagram.md  event_bus.md  final_checklist.md  getting_started.md  models.md  models_lightweight_20gb.md  path_threat_model.md  release_checklist.md  research_notes.md  runbook_failures.md  stage4_feature_harvest.md  token_efficiency.md  verification_matrix.md
images/: Commands  Memory  Model  SAGE  Skills
plan final/: SAGE CPV1.html  SAGE_implementation_plan.md  SAGE_phase5_6_tasks.md  SAGE_v1_FINAL.md  docsinsdie.md
scripts/: live_verify.sh  prepare_release.sh  quick_benchmark.py  regression_local.sh  run_tiny_greenfield_demo.sh  verify_local.sh
sim/: Dockerfile
src/: main.py
tests/: __init__.py  test_agent_insight_emission_unit.py  test_agent_insight_injection_unit.py  test_agent_insight_logging_unit.py  test_app.py  test_bench_artifact_cli_unit.py  test_chat_session_store_unit.py  test_clarify_unit.py  test_cli_activation_unit.py  test_cli_stagec_unit.py  test_cli_version_unit.py  test_config_paths_unit.py  test_debugger_normalise_unit.py  (+45 more)
(+140 files in other folders)
